feat: [PAGOPA-2718] Definition of Azure Functions for process FdR3 historical BLOB files  (#17)
* [PAGOPA-2718] chore: moving DTOs on separated package
* [PAGOPA-2718] feat: adding DTOs for FdR3 blob file
* [PAGOPA-2718] fix: adding metadata info on DTOs
* [PAGOPA-2718] feat: adding new mapper for Flow and Payment objects
* [PAGOPA-2718] feat: adding new error code for FDR3 section
* [PAGOPA-2718] feat: adding 'published' field, retrievable from blob file
* [PAGOPA-2718] feat: including and refactoring ProcessFDR3BlobFiles function
* [PAGOPA-2620] feat: including handling of FdR3 container's files on HTTP Trigger
* [PAGOPA-2620] chore: including log for tracing purpose
* [PAGOPA-2718] feat: defining different pod instances, one for each Azure function
* [PAGOPA-2718] fix: including missing anchor tags
* [PAGOPA-2718] fix: refactoring anchoring and pod generation
* [PAGOPA-2718] fix: renamed wrongly formatted aliases
* [PAGOPA-2718] fix: including workload identity assignation on GitHub deploy pipeline
* [PAGOPA-2718] fix: renaming ingress path in order to avoid conflicts to old version
* [PAGOPA-2718] fix: added default constructors on FdR3's DTOs
* [PAGOPA-2718] fix: resolving bug on Instant date not converted in String
* [PAGOPA-2718] feat: including JUnit test
* [PAGOPA-2718] fix: updating log level for all functions
* [PAGOPA-2718] fix: add style formatter on precommit config
* [PAGOPA-2718] chore: executing formatting via pre-commit
* [PAGOPA-2718] fix: resolving errors on JUnit tests

---------

Co-authored-by: pagopa-github-bot <github-bot@pagopa.it>
Co-authored-by: Jacopo Carlini <jacopo.carlini@gmail.com>